--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.4.1",
     "use-debounce": "^10.0.6",
     "zod": "^3.24.2"
   },
