--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/material": "^7.3.5",
     "@t3-oss/env-nextjs": "^0.12.0",
     "drizzle-orm": "^0.41.0",
+    "lucide-react": "^0.554.0",
     "mui": "^0.0.1",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
