change from sqlite to postgres

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,21 @@
-GROQ_API_KEY=gsk_
-DB_FILE_PATH=Chinook_Sqlite.sqlite
-GEMINI_API_KEY=AI
+# API Keys (Required)
+# You can get a Gemini API key from Google AI Studio
+GEMINI_API_KEY=your_gemini_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
+
+# Database Configuration
+# The path to your SQLite file inside the backend folder (or container)
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
+
+# Application Settings
+LLM_MODEL_NAME=gemini-flash-lite-latest
+API_HOST=0.0.0.0
+API_PORT=8000
+
+# Docker/Service URL (Used by ui.py)
+API_URL=http://localhost:8000/generate-chart-stream
+
+SUPABASE_URL=postgresql://user:password@localhost:5432/dbname
+SUPABASE_KEY=your_supabase_key
+SUPABASE_BUCKET_NAME=your_bucket_name
