--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.554.0",
-    "mui": "^0.0.1",
+    "nanoid": "^5.1.6",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
