--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.4.1",
     "use-debounce": "^10.0.6",
     "zod": "^3.24.2"
