--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,10 +6,16 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.121.3",
-    "pandas>=2.3.3",
     "pydantic-ai>=1.21.0",
     "python-dotenv>=1.2.1",
     "streamlit>=1.51.0",
     "psycopg[binary]>=3.2.0",
     "xgboost>=3.1.2",
+    "supabase>=2.24.0",
+    "joblib>=1.5.2",
+    "scikit-learn>=1.7.2",
+    "lightgbm>=4.6.0",
+    "prophet>=1.2.1",
+    "plotly>=6.5.0",
+    "pandas>=2.0.0",
 ]
