--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -38,6 +38,6 @@
     "**/*.cjs",
     "**/*.js",
     ".next/types/**/*.ts"
-  ],
+, "src/components/chatbot-panel.jsx"  ],
   "exclude": ["node_modules", "generated"]
 }
