--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,4 +18,14 @@ dependencies = [
     "prophet>=1.2.1",
     "plotly>=6.5.0",
     "pandas>=2.0.0",
+    "chromadb>=0.5.0",
+    "sentence-transformers>=3.0.0",
+    "llama-index-core>=0.10.0",
+    "llama-index-embeddings-huggingface>=0.1.0",
+    "llama-index-vector-stores-chroma>=0.1.0",
+    "llama-index-readers-file>=0.1.0",
+    "llama-index-llms-gemini>=0.1.0",
+    "pypdf>=4.0.0",
+    "python-docx>=1.1.0",
+    "python-multipart>=0.0.9",
 ]
